added navbar skeleton & basic styling

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 </head>
 
 <body>
+    <!-- Begin work on Navbar -->
+    <nav id="navbar" class="navbar navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Fluff Finder</a>
+        </div>
+    </nav>
+
     <!-- input can use a self-closing tag -->
     <input type="text" id="searchValue" />
     <button id="btnSearch">Search</button>
