--- a/index.html
+++ b/index.html
@@ -26,8 +26,25 @@
 <body>
     <!-- Begin work on Navbar -->
     <nav id="navbar" class="navbar navbar-light">
+        <!-- container to hold the navbar -->
         <div class="container-fluid">
+            <!-- branding will be Fluff Finder -->
             <a class="navbar-brand" href="#">Fluff Finder</a>
+            <!-- didn't work before the button toggler, try to add it now -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Navbar items will be within another div -->
+            <div id="navbarContent" class="collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Test</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
