--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="card">
             <div class="card-body">
-                This is some text within a card body.
+                Welcome to Fluff Finder
             </div>
         </div>
     </div>
