--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
         </div>
     </nav>
 
-    <!-- input can use a self-closing tag -->
-    <input type="text" id="searchValue" />
-    <button id="btnSearch">Search</button>
 
     <div id="mainContainer" class="container border border-info mt-3">
+        <!-- nest this in a div and add some spacing, can worry about mobile responsive later (?)-->
+        <div id="headerContainer" class="mt-3 ms-3 mb-3">
+            <input type="text" id="searchValue" />
+            <button type="button" id="btnSearch" class="btn btn-dark">Search For Places</button>
+        </div>
         <div id="singaporeMap">
         </div>
         <div class="card">
