slight mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <label for="categorySelection">Select Category</label>
 
             <div class="row mb-3">
-                <div class="col-9">
+                <div class="col-sm-8 col-md-9">
                     <!-- Bootstrap 'select' element to select categories -->
                     <select id="categoryForm" type="text" class="form-control col-9" aria-label="Category selection form">
                         <option value="pet-cafe" selected>Pet Cafes</option>
@@ -77,7 +77,7 @@
                         <option value="dog-parks">Dog Parks</option>
                     </select>
                 </div>
-                <div class="col-3">
+                <div class="col-sm-4 col-md-3">
                     <!-- form for search result limit (1 - 50)-->
                     <input type="searchResultLimit" class="form-control" id="resultLimitForm" placeholder="# of Results"/>
                 </div>
