--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- container to hold the navbar -->
         <div class="container-fluid">
             <!-- branding will be Fluff Finder -->
-            <a id="fluffFinderHeader" class="navbar-brand" href="#">Fluff Finder</a>
+            <a id="fluffFinderHeader" class="navbar-brand hoverable" href="#">Fluff Finder</a>
             <!-- didn't work before the button toggler, try to add it now, REMEMBER HASHTAGS FOR ID -->
             <!-- aria tags are for accessibility purposes. -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
@@ -48,10 +48,19 @@
             <div id="navbarContent" class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active hoverable" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Test</a>
+                        <a class="nav-link hoverable" href="#">Dog Statistics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hoverable" href="#">Fun Dog Facts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hoverable" href="#">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hoverable" href="#">Contact Us</a>
                     </li>
                 </ul>
             </div>
