creation of base div to hold search results, functional layer clear upon search

--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
                 <span><i class="fa-solid fa-magnifying-glass"></i></span>
                 Search For Places
             </button>
+
+            <div id="searchResults"></div>
         </div>
         <div id="singaporeMap">
         </div>
