--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                     <label for="categorySelection">Select Category</label>
                     <!-- Bootstrap 'select' element to select categories -->
                     <select id="categoryForm" type="text" class="form-control mb-3" aria-label="Category selection form">
-                        <option value="all" selected>All Categories</option>
-                        <option value="pet-cafe">Pet Cafes</option>
+                        <option value="pet-cafe" selected>Pet Cafes</option>
                         <option value="pet-grooming">Pet Grooming Services</option>
                         <option value="pet-supplies">Pet Supplies Stores</option>
                         <option value="dog-parks">Dog Parks</option>
+                        <option value="all">All Categories</option>
                     </select>
                 </div>
 
@@ -142,7 +142,9 @@
                 Search For Places
             </button>
 
+            <!-- div to store all of the search results on the GUI itself -->
             <div id="searchResults"></div>
+
         </div>
         <div id="singaporeMap">
         </div>
