functional search results list with basic styling, flyTo functionality on click

--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
             </button>
 
             <!-- div to store all of the search results on the GUI itself -->
-            <div id="searchResults"></div>
+            <div id="searchResults">
+                <ul id="searchResultsList"></ul>
+            </div>
 
         </div>
         <div id="singaporeMap">
