further search list styling

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offCanvasContainer"
                 aria-labelledby="offcanvasRightLabel"
                 data-bs-backdrop="false">
-                <div class="offcanvas-header">
+                <div id="offCanvasHeader" class="offcanvas-header">
                     <h3 id="offcanvasRightLabel" class="display-5">Search Results</h5>
                     <button type="button" id="closeButton" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
