basic dog facts page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a class="nav-link hoverable" href="#">Dog Statistics</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link hoverable" href="#">Fun Dog Facts</a>
+                        <a class="nav-link hoverable" href="fun-dog-facts.html">Fun Dog Facts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link hoverable" href="#">About Us</a>
