basic functionality of dogfacts page with header

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- container to hold the navbar -->
         <div class="container-fluid">
             <!-- branding will be Fluff Finder -->
-            <a id="fluffFinderHeader" class="navbar-brand hoverable" href="#">Fluff Finder</a>
+            <a id="fluffFinderHeader" class="navbar-brand hoverable fluffFinderHeader" href="#">Fluff Finder</a>
             <!-- didn't work before the button toggler, try to add it now, REMEMBER HASHTAGS FOR ID -->
             <!-- aria tags are for accessibility purposes. -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
