--- a/fun-dog-facts.html
+++ b/fun-dog-facts.html
@@ -5,8 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun Dog Facts</title>
+
+    <!-- Bootstrap CSS import -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- LINK STYLESHEET again... -->
+    <link rel="stylesheet" href="style.css" />
+
 </head>
 <body>
-    <h1>Hello World</h1>
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-light">
+        <!-- container to hold the navbar -->
+        <div class="container-fluid">
+            <!-- branding will be Fluff Finder -->
+            <a id="dogFactsHeader" class="navbar-brand hoverable fluffFinderHeader" href="#">Fluff Finder</a>
+            <!-- didn't work before the button toggler, try to add it now, REMEMBER HASHTAGS FOR ID -->
+            <!-- aria tags are for accessibility purposes. -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+                aria-controls="navbarDropdown" aria-expanded="false" aria-label="Toggle collapsible navigation menu">
+                <span class="navbar-toggler-icon"></span>
+
+            </button>
+            <!-- Navbar items will be within another div -->
+            <div id="dogFactsNavbar" class="collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link hoverable" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hoverable" href="#">Dog Statistics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active hoverable" aria-current="page" href="#">Fun Dog Facts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hoverable" href="#">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hoverable" href="#">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
