dog facts update

--- a/fun-dog-facts.html
+++ b/fun-dog-facts.html
@@ -13,9 +13,12 @@
     <!-- Link Google Fonts for custom styling -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Montserrat for Fluff Finder Header -->
     <link
         href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Montserrat:wght@200;400;600&family=Unbounded&display=swap"
         rel="stylesheet">
+    <!-- Play for headers -->
+    <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
 
     <!-- LINK STYLESHEET again... -->
     <link rel="stylesheet" href="style.css" />
