--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
     <!-- Link Google Fonts for custom styling -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Montserrat for Fluff Finder Header -->
     <link
         href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Montserrat:wght@200;400;600&family=Unbounded&display=swap"
         rel="stylesheet">
+    <!-- Play for headers -->
+    <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
 
     <!-- FontAwesome Kit -->
     <script src="https://kit.fontawesome.com/171ea7294d.js" crossorigin="anonymous"></script>
@@ -39,7 +42,7 @@
         <!-- container to hold the navbar -->
         <div class="container-fluid">
             <!-- branding will be Fluff Finder -->
-            <a id="fluffFinderHeader" class="navbar-brand hoverable fluffFinderHeader" href="#">Fluff Finder</a>
+            <a id="fluffFinderHeader" class="navbar-brand fluffFinderHeader" href="#">Fluff Finder</a>
             <!-- didn't work before the button toggler, try to add it now, REMEMBER HASHTAGS FOR ID -->
             <!-- aria tags are for accessibility purposes. -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
@@ -71,7 +74,7 @@
     </nav>
 
 
-    <div id="mainContainer" class="container border border-info mt-3">
+    <div id="mainContainer" class="container mt-3">
         <!-- nest this in a div and add some spacing, can worry about mobile responsive later (?)-->
         <div id="headerContainer" class="mt-3 ms-3 mb-3">
             <!-- OK WORRY ABOUT ROW / UIUX LATER-->
@@ -182,9 +185,24 @@
         </div>
         <div id="singaporeMap">
         </div>
-        <div class="card">
+        
+        <div class="card mt-3 mb-3">
             <div class="card-body">
-                Welcome to Fluff Finder
+                <div id="promoContainer">
+                    <h5 class="card-title">Subscribe to get special updates:</h5>
+                    <div class="row mb-3">
+                        <div class="col-8">
+                            <input type="text" class="form-control" id="emailForm" placeholder="Enter email address">
+                        </div>
+                        <div class="col-4">
+                            <button type="button" id="emailSubmitBtn" class="btn btn-primary">
+                                Submit
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <p id="copyrightText" class="card-text">© Copyright Fluff Finder 2023</p>
             </div>
         </div>
     </div>
