--- a/fun-dog-facts.html
+++ b/fun-dog-facts.html
@@ -17,7 +17,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Montserrat:wght@200;400;600&family=Unbounded&display=swap"
         rel="stylesheet">
-    <!-- Play for headers -->
+    <!-- Link Kalam for Navbar Items -->
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
+    <!-- Link Play for main font -->
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
 
     <!-- LINK STYLESHEET again... -->
@@ -41,19 +43,19 @@
             <div id="dogFactsNavbar" class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link hoverable" href="index.html">Home</a>
+                        <a class="nav-link navbarElement" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link hoverable" href="#">Dog Statistics</a>
+                        <a class="nav-link navbarElement" href="#">Dog Statistics</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active hoverable" aria-current="page" href="#">Fun Dog Facts</a>
+                        <a class="nav-link active navbarElement" aria-current="page" href="#">Fun Dog Facts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link hoverable" href="#">About Us</a>
+                        <a class="nav-link navbarElement" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link hoverable" href="#">Contact Us</a>
+                        <a class="nav-link navbarElement" href="#">Contact Us</a>
                     </li>
                 </ul>
             </div>
