more styling and added hr

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
     <!-- Link Google Fonts for custom styling -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Montserrat for Fluff Finder Header -->
+    <!-- Link Montserrat for Fluff Finder Header -->
     <link
         href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Montserrat:wght@200;400;600&family=Unbounded&display=swap"
         rel="stylesheet">
-    <!-- Play for headers -->
+    <!-- Link Carter One for Navbar Items -->
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
+    <!-- Link Play for main font -->
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
 
     <!-- FontAwesome Kit -->
@@ -54,19 +56,19 @@
             <div id="navbarContent" class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active hoverable" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active navbarElement" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link hoverable" href="#">Dog Statistics</a>
+                        <a class="nav-link navbarElement" href="#">Dog Statistics</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link hoverable" href="fun-dog-facts.html">Fun Dog Facts</a>
+                        <a class="nav-link navbarElement" href="fun-dog-facts.html">Fun Dog Facts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link hoverable" href="#">About Us</a>
+                        <a class="nav-link navbarElement" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link hoverable" href="#">Contact Us</a>
+                        <a class="nav-link navbarElement" href="#">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -201,6 +203,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- hr: horizontal rule, can be customized in css too, for separation of content -->
                 <hr>
                 <p id="copyrightText" class="card-text">© Copyright Fluff Finder 2023</p>
             </div>
