--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div id="singaporeMap">
         </div>
         
-        <div class="card mt-3 mb-3">
+        <div id="lowerContainer" class="card mt-3 mb-3">
             <div class="card-body">
                 <div id="promoContainer">
                     <h5 class="card-title">Subscribe to get special updates:</h5>
