linked correct font...

--- a/fun-dog-facts.html
+++ b/fun-dog-facts.html
@@ -17,8 +17,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Exo+2:wght@500&family=Montserrat:wght@200;400;600&family=Unbounded&display=swap"
         rel="stylesheet">
-    <!-- Link Kalam for Navbar Items -->
-    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
+    <!-- Link Carter One for Navbar Items -->
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
     <!-- Link Play for main font -->
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
 
