added base animal facts functionality

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                         <a class="nav-link active navbarElement" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navbarElement" href="#">Dog Statistics</a>
+                        <a class="nav-link navbarElement" href="animal-facts.html">Fun Animal Facts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navbarElement" href="fun-dog-facts.html">Fun Dog Facts</a>
+                        <a class="nav-link navbarElement" href="#">Animal Statistics</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link navbarElement" href="#">About Us</a>
