--- a/animal-facts.html
+++ b/animal-facts.html
@@ -62,6 +62,11 @@
         </div>
     </nav>
 
+    <!-- main container -->
+    <div id="animalFactsContainer" class="container mt-3">
+        <p>hi</p>
+    </div>
+
     <!-- import Axios -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.3/axios.min.js"></script>
 
