functional animal fact skeleton

--- a/animal-facts.html
+++ b/animal-facts.html
@@ -64,7 +64,70 @@
 
     <!-- main container -->
     <div id="animalFactsContainer" class="container mt-3">
-        <p>hi</p>
+        <div class="row">
+            <div class="col-sm-12 col-md-6 mb-3">
+                <div class="card">
+                    <div class="card-header">
+                      Fun Dog Fact!
+                    </div>
+                    <div class="card-body">
+                      <blockquote class="blockquote mb-0">
+                        <p id="dogQuote1">A well-known quote, contained in a blockquote element.</p>
+                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                      </blockquote>
+                    </div>
+                  </div>
+                  <button type="button" id="dogBtn1" class="btn btn-dark buttons">
+                    <!-- span to display the fontawesome icon within the button -->
+                    <span><i class="fa-solid fa-magnifying-glass"></i></span>
+                    Refresh Fact
+                </button>
+            </div>
+
+            <div class="col-sm-12 col-md-6 mb-3">
+                <div class="card">
+                    <div class="card-header">
+                      Fun Cat Fact!
+                    </div>
+                    <div class="card-body">
+                      <blockquote id="catQuote1" class="blockquote mb-0">
+                        <p>A well-known quote, contained in a blockquote element.</p>
+                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                      </blockquote>
+                    </div>
+                  </div>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-sm-12 col-md-6 mt-3">
+                <div class="card">
+                    <div class="card-header">
+                      Fun Dog Fact!
+                    </div>
+                    <div class="card-body">
+                      <blockquote id="dogQuote2" class="blockquote mb-0">
+                        <p>A well-known quote, contained in a blockquote element.</p>
+                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                      </blockquote>
+                    </div>
+                  </div>
+            </div>
+
+            <div class="col-sm-12 col-md-6 mt-3">
+                <div class="card">
+                    <div class="card-header">
+                      Fun Cat Fact!
+                    </div>
+                    <div class="card-body">
+                      <blockquote id="catQuote2" class="blockquote mb-0">
+                        <p>A well-known quote, contained in a blockquote element.</p>
+                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                      </blockquote>
+                    </div>
+                  </div>
+            </div>
+        </div>
     </div>
 
     <!-- import Axios -->
