--- a/animal-facts.html
+++ b/animal-facts.html
@@ -22,6 +22,9 @@
     <!-- Link Play for main font -->
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
 
+    <!-- FontAwesome Kit -->
+    <script src="https://kit.fontawesome.com/171ea7294d.js" crossorigin="anonymous"></script>
+
     <!-- LINK STYLESHEET again... -->
     <link rel="stylesheet" href="style.css" />
 
@@ -72,14 +75,15 @@
                     </div>
                     <div class="card-body">
                       <blockquote class="blockquote mb-0">
+                        <div id="dogImg1"></div>
                         <p id="dogQuote1">A well-known quote, contained in a blockquote element.</p>
                         <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
                       </blockquote>
                     </div>
                   </div>
-                  <button type="button" id="dogBtn1" class="btn btn-dark buttons">
+                  <button type="button" id="dogBtn1" class="btn btn-warning buttons">
                     <!-- span to display the fontawesome icon within the button -->
-                    <span><i class="fa-solid fa-magnifying-glass"></i></span>
+                    <span><i class="fa-solid fa-arrows-rotate"></i></span>
                     Refresh Fact
                 </button>
             </div>
@@ -96,6 +100,11 @@
                       </blockquote>
                     </div>
                   </div>
+                  <button type="button" id="catBtn1" class="btn btn-info buttons">
+                    <!-- span to display the fontawesome icon within the button -->
+                    <span><i class="fa-solid fa-arrows-rotate"></i></span>
+                    Refresh Fact
+                </button>
             </div>
         </div>
         
@@ -112,6 +121,11 @@
                       </blockquote>
                     </div>
                   </div>
+                  <button type="button" id="dogBtn2" class="btn btn-warning buttons">
+                    <!-- span to display the fontawesome icon within the button -->
+                    <span><i class="fa-solid fa-arrows-rotate"></i></span>
+                    Refresh Fact
+                </button>
             </div>
 
             <div class="col-sm-12 col-md-6 mt-3">
@@ -126,6 +140,11 @@
                       </blockquote>
                     </div>
                   </div>
+                  <button type="button" id="catBtn2" class="btn btn-info buttons">
+                    <!-- span to display the fontawesome icon within the button -->
+                    <span><i class="fa-solid fa-arrows-rotate"></i></span>
+                    Refresh Fact
+                </button>
             </div>
         </div>
     </div>
