--- a/animal-facts.html
+++ b/animal-facts.html
@@ -28,6 +28,9 @@
     <!-- LINK STYLESHEET again... -->
     <link rel="stylesheet" href="style.css" />
 
+    <!-- link facts -->
+    <link rel="stylesheet" href="facts.css"/>
+
 </head>
 <body>
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light">
@@ -76,8 +79,9 @@
                     <div class="card-body">
                       <blockquote class="blockquote mb-0">
                         <div id="dogImg1"></div>
-                        <p id="dogQuote1">A well-known quote, contained in a blockquote element.</p>
-                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                        <p id="dogQuote1">A dog’s nose print is unique, much like a person’s fingerprint.</p>
+                        <!-- source: https://www.akc.org/expert-advice/lifestyle/dog-facts/ -->
+                        <footer class="blockquote-footer"><cite title="Source Title">American Kennel Club </cite></footer>
                       </blockquote>
                     </div>
                   </div>
